# pdns-sysrepo

./: .clang-format  .gitignore  .gitmodules  LICENSE  README.md  dist-fix.sh  make-version.sh  meson.build  meson_options.txt  pdns-configurator.example.yaml  pdns-configurator.service.in  pdns-sysrepo.example.yaml  pdns-sysrepo.service.in  tmp.json  version.h.in
.circleci/: config.yml
builder-support/: gen-version
builder-support/debian/libyang/: changelog  control  copyright  libyang1.install  rules
builder-support/debian/pdns-sysrepo/: changelog  control  copyright  pdns-sysrepo.lintian-overrides  pdns-sysrepo.sysuser  rules
builder-support/debian/sdbusplus/: changelog  control  copyright  libsdbusplus-dev.links  rules
builder-support/debian/sysrepo/: changelog  control  copyright  libsysrepo-cpp-dev.install  libsysrepo-cpp4.install  libsysrepo-dev.install  libsysrepo5.dirs  libsysrepo5.install  rules
builder-support/dockerfiles/: Dockerfile.libyang  Dockerfile.libyang.dist  Dockerfile.libyang.sdist  Dockerfile.pdns-sysrepo  Dockerfile.sdbusplus  Dockerfile.sdbusplus.dist  Dockerfile.sdbusplus.sdist  Dockerfile.sysrepo  Dockerfile.sysrepo.dist  Dockerfile.sysrepo.sdist  Dockerfile.target.debian-buster  Dockerfile.target.sdist  Dockerfile.target.tests  Dockerfile.target.ubuntu-bionic
documentation/: changelog.rst  conf.py  future.rst  index.rst  install.rst  meson.build  yang-model.rst
documentation/development/: building.rst  end-to-end-tests.rst  index.rst  release.rst  sysrepo-gotchas.rst
documentation/guides/: config-changes.rst  config.rst  zones.json  zones.rst
documentation/zones/: index.rst  rrset-management-off.rst  rrset-management-on.rst
end-to-end-tests/: .gitignore  README.md  pdns_sysrepo_tests.py  requirements.txt  runtests.sh  test_01-initial.py  test_02-acl.py
iputils/: iputils.hh
polkit/: 10-pdns.rules
sr_wrapper/: README.md  session.cc  session.hh
src/: config.h.in  pdns-configurator.cc  pdns-sysrepo.cc
src/config/: config.cc  config.hh
src/configurator/: config.cc  config.hh  configurator.cc  configurator.hh  subscribe.cc  subscribe.hh  util.cc  util.hh
src/configurator/subscribe/: helpers.cc  pdns-config.cc  service.cc  zones.cc
src/pdns-config/: api-client.cc  config-update.cc  pdns-config-callback.cc  pdns-config-callback.hh  pdns-config.cc  pdns-config.hh  service.cc  zone-management.cc
src/remote-backend/: domain-id.cc  domainMetadata.cc  feedRecord.cc  find-zone.cc  getAllDomains.cc  getDomainInfo.cc  getUnfreshSlaveInfos.cc  getUpdatedMasters.cc  httpfunc.cc  json-helpers.cc  list.cc  log.cc  lookup.cc  remote-backend.cc  remote-backend.hh  setFresh.cc  setNotified.cc  sysrepo-helpers.cc  transactions.cc  zone-helpers.cc
src/util/: util.cc  util.hh
src/zone-oper-callback/: zone-oper-callback.cc  zone-oper-callback.hh
subprojects/pdns-api-cpp/: README.md  authoritative-api-openapi.yaml  meson.build
subprojects/pdns-api-cpp/include/: ApiClient.cpp  ApiClient.h  ApiConfiguration.cpp  ApiConfiguration.h  ApiException.cpp  ApiException.h  CMakeLists.txt  HttpContent.cpp  HttpContent.h  IHttpBody.h  JsonBody.cpp  JsonBody.h  ModelBase.cpp  ModelBase.h  MultipartFormData.cpp  MultipartFormData.h  Object.cpp  Object.h  README.md
subprojects/pdns-api-cpp/include/api/: ConfigApi.cpp  ConfigApi.h  SearchApi.cpp  SearchApi.h  ServersApi.cpp  ServersApi.h  TsigkeyApi.cpp  TsigkeyApi.h  ZonecryptokeyApi.cpp  ZonecryptokeyApi.h  ZonemetadataApi.cpp  ZonemetadataApi.h  ZonesApi.cpp  ZonesApi.h
subprojects/pdns-api-cpp/include/model/: CacheFlushResult.cpp  CacheFlushResult.h  Comment.cpp  Comment.h  ConfigSetting.cpp  ConfigSetting.h  Cryptokey.cpp  Cryptokey.h  Error.cpp  Error.h  MapStatisticItem.cpp  MapStatisticItem.h  Metadata.cpp  Metadata.h  RRSet.cpp  RRSet.h  Record.cpp  Record.h  RingStatisticItem.cpp  RingStatisticItem.h  SearchResult.cpp  SearchResult.h  SearchResultComment.cpp  SearchResultComment.h  SearchResultRecord.cpp  SearchResultRecord.h  SearchResultZone.cpp  SearchResultZone.h  SearchResults.cpp  SearchResults.h  Server.cpp  Server.h  SimpleStatisticItem.cpp  SimpleStatisticItem.h  StatisticItem.cpp  StatisticItem.h  TSIGKey.cpp  TSIGKey.h  Zone.cpp  Zone.h
test/: api-mock.hh  meson.build  test-common.hh
test/create-config/: create-config.cc
test/remote-backend/: config-initial.in.json  meson.build  pdns.conf  run-remote-backend-tests.sh  supervisord.conf.in  test-initial-config.py  test-slave.py
test/yang-typedefs/: yang-typedefs.cc
test/zones/: callback-wrapper.hh  zone-add-delete.cc
yang/: pdns-server-typedef-test.yang  pdns-server.yang
